--- a/dataprocessing.ipynb
+++ b/dataprocessing.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "source": [
     "labels = list(trained_models_e.keys())\n",
     "x = np.arange(len(labels))  # the label locations\n",
@@ -475,8 +475,8 @@
     "        text = ax.text(j, i, \"%.3f\" % p_matrix[i, j],\n",
     "                       ha=\"center\", va=\"center\", color=\"w\")\n",
     "\n",
-    "plt.show()\n",
-    "plt.savefig(\"models_evaluation/plots/p_matrix_sampled_sampled.png\")"
+    "plt.savefig(\"models_evaluation/plots/p_matrix_sampled_sampled.jpg\")\n",
+    "plt.show()\n"
    ],
    "outputs": [
     {
@@ -490,15 +490,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {}
     }
    ],
    "metadata": {}
