added jpeg p_matrix for easier inspection

--- a/dataprocessing.ipynb
+++ b/dataprocessing.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,8 @@
     "    \"P-value matrix - models performance comparison\",\n",
     "    \"Training on manually chosen features over sampled dataset\",\n",
     "    \"Training on MIQUBO features over sampled dataset\",\n",
-    "    \"p_matrix_ec_ss\"\n",
+    "    \"p_matrix_ec_ss\",\n",
+    "    extension = \"jpeg\"\n",
     "    )\n",
     "    \n",
     "plot_p_matrix(\n",
@@ -678,7 +679,8 @@
     "    \"P-value matrix - models performance comparison\",\n",
     "    \"Training on MIQUBO features over raw dataset\",\n",
     "    \"Training on MIQUBO features over sampled dataset\",\n",
-    "    \"p_matrix_ee_sns\"\n",
+    "    \"p_matrix_ee_sns\",\n",
+    "    extension = \"jpeg\"\n",
     "    )\n",
     "\n",
     "plot_p_matrix(\n",
@@ -687,7 +689,8 @@
     "    \"P-value matrix - models performance comparison\",\n",
     "    \"Training on manually chosen features over raw dataset\",\n",
     "    \"Training on manually chosen features over sampled dataset\",\n",
-    "    \"p_matrix_cc_sns\"\n",
+    "    \"p_matrix_cc_sns\",\n",
+    "    extension = \"jpeg\"\n",
     "    )\n"
    ]
   },
