clean: clean repo

--- a/p_matrix.ipynb
+++ b/p_matrix.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "df_all = pd.read_csv(\"data/med_orginal2.csv\",header=0, sep=\"\\,\").fillna(method = \"ffill\")\n",
+    "df_all = pd.read_csv(\"data/full_dataset.csv\",header=0, sep=\"\\,\").fillna(method = \"ffill\")\n",
     "\n",
     "\n",
     "target_f = 'Graft loss 1 year'\n",
